gitops/stateful/redis/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: databases
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: pawbridge
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: pawbridge
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: pawbridge
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
