gitops/stateful/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: databases
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: pawbridge
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: pawbridge
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: pawbridge
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
